<resources>
    <string name="app_name">MVP_NPTec</string>
    <string name="logo_da_tela_de_login">Logo da Tela de Login</string>
    <string name="campo_usu_rio">Campo usuário</string>
    <string name="campo_senha">Campo senha</string>
    <string name="senha">Senha</string>
    <string name="bot_o_entrar">Botão entrar</string>
    <string name="entrar">ENTRAR</string>
    <string name="campo_para_recupera_o_da_senha">Campo para recuperação da senha</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="usu_rio">Usuário</string>
    <string name="temperatura">TEMPERATURA</string>
    <string name="_10">10</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>