<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_login_imageView"
        android:layout_width="411dp"
        android:layout_height="349dp"
        android:contentDescription="@string/logo_da_tela_de_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998"
        app:srcCompat="@drawable/logo_np_circulo" />

    <EditText
        android:id="@+id/user_login_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/campo_usu_rio"
        android:ems="10"
        android:hint="@string/usu_rio"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_login_imageView"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/password_login_editTextText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/campo_senha"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_login_editText"
        app:layout_constraintTop_toBottomOf="@+id/user_login_editText"
        app:layout_constraintVertical_bias="0.106"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/entrar_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bot_o_entrar"
        android:text="@string/entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/password_login_editTextText"
        app:layout_constraintTop_toBottomOf="@+id/password_login_editTextText"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/esqueceuSenha_login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/campo_para_recupera_o_da_senha"
        android:text="@string/recuperar_senha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/entrar_login_button"
        app:layout_constraintTop_toBottomOf="@+id/entrar_login_button"
        app:layout_constraintVertical_bias="0.100000024" />
</androidx.constraintlayout.widget.ConstraintLayout>